# preprocessing

./: .gitignore  README.md  add_daily.py  generate_all_clim.py  generate_all_daily.py  generate_colours.py  pyproject.toml
